--- a/FamilyTree/Tests/FamilyTree.Modules.ModuleName.Tests/FamilyTree.Modules.ModuleName.Tests.csproj
+++ b/FamilyTree/Tests/FamilyTree.Modules.ModuleName.Tests/FamilyTree.Modules.ModuleName.Tests.csproj
@@ -22,6 +22,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\FamilyTree.Modules.Person\FamilyTree.Modules.Person.csproj" />
+    <ProjectReference Include="..\..\..\FamilyTree.Services.Repository.Interfaces\FamilyTree.Services.Repository.Interfaces.csproj" />
+    <ProjectReference Include="..\..\..\FamilyTree.Services.Repository\FamilyTree.Services.Repository.csproj" />
     <ProjectReference Include="..\..\Modules\FamilyTree.Modules.ModuleName\FamilyTree.Modules.ModuleName.csproj" />
     <ProjectReference Include="..\..\Services\FamilyTree.Services\FamilyTree.Services.csproj" />
   </ItemGroup>
