--- a/FamilyTree.Modules.FamilyTree.Tests/FamilyTree.Modules.FamilyTree.Tests.csproj
+++ b/FamilyTree.Modules.FamilyTree.Tests/FamilyTree.Modules.FamilyTree.Tests.csproj
@@ -8,9 +8,16 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
+    <PackageReference Include="Moq" Version="4.14.0" />
     <PackageReference Include="xunit" Version="2.4.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
     <PackageReference Include="coverlet.collector" Version="1.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\FamilyTree.Business\FamilyTree.Business.csproj" />
+    <ProjectReference Include="..\FamilyTree.Modules.FamilyTree\FamilyTree.Modules.FamilyTree.csproj" />
+    <ProjectReference Include="..\FamilyTree.Services.Repository\FamilyTree.Services.Repository.csproj" />
   </ItemGroup>
 
 </Project>
