--- a/FamilyTree/FamilyTree/FamilyTree.csproj
+++ b/FamilyTree/FamilyTree/FamilyTree.csproj
@@ -11,6 +11,8 @@
   <ItemGroup>
     <ProjectReference Include="..\..\FamilyTree.Modules.FamilyTree\FamilyTree.Modules.FamilyTree.csproj" />
     <ProjectReference Include="..\..\FamilyTree.Modules.Main\FamilyTree.Modules.Main.csproj" />
+    <ProjectReference Include="..\..\FamilyTree.Modules.Person\FamilyTree.Modules.Person.csproj" />
+    <ProjectReference Include="..\..\FamilyTree.Modules.Relationship\FamilyTree.Modules.Relationship.csproj" />
     <ProjectReference Include="..\FamilyTree.Core\FamilyTree.Core.csproj" />
     <ProjectReference Include="..\Modules\FamilyTree.Modules.ModuleName\FamilyTree.Modules.ModuleName.csproj" />
     <ProjectReference Include="..\Services\FamilyTree.Services.Interfaces\FamilyTree.Services.Interfaces.csproj" />
