--- a/FamilyTree/FamilyTree.Core/FamilyTree.Core.csproj
+++ b/FamilyTree/FamilyTree.Core/FamilyTree.Core.csproj
@@ -8,4 +8,7 @@
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="Prism.Wpf" Version="7.2.0.1422" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\FamilyTree.Business\FamilyTree.Business.csproj" />
+  </ItemGroup>
 </Project>
