--- a/FamilyTree.Business/FamilyTree.Business.csproj
+++ b/FamilyTree.Business/FamilyTree.Business.csproj
@@ -5,6 +5,7 @@
     <AssemblyName>FamilyTree.Business</AssemblyName>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="Prism.Wpf" Version="7.2.0.1422" />
   </ItemGroup>
 </Project>
