Adapters folder added

--- a/FamilyTree/FamilyTree.Core/FamilyTree.Core.csproj
+++ b/FamilyTree/FamilyTree.Core/FamilyTree.Core.csproj
@@ -11,4 +11,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\FamilyTree.Business\FamilyTree.Business.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Adapters\" />
+  </ItemGroup>
 </Project>
