--- a/FamilyTree.Services.TreeDrawer.Interfaces/FamilyTree.Services.TreeDrawer.Interfaces.csproj
+++ b/FamilyTree.Services.TreeDrawer.Interfaces/FamilyTree.Services.TreeDrawer.Interfaces.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\FamilyTree.Business\FamilyTree.Business.csproj" />
+  </ItemGroup>
+
 </Project>
