--- a/FamilyTree.Services.TreeDrawer/FamilyTree.Services.TreeDrawer.csproj
+++ b/FamilyTree.Services.TreeDrawer/FamilyTree.Services.TreeDrawer.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <ProjectReference Include="..\FamilyTree.Business\FamilyTree.Business.csproj" />
     <ProjectReference Include="..\FamilyTree.Modules.Relationship\FamilyTree.Modules.Relationship.csproj" />
+    <ProjectReference Include="..\FamilyTree.Services.TreeDrawer.Interfaces\FamilyTree.Services.TreeDrawer.Interfaces.csproj" />
   </ItemGroup>
 
 </Project>
