--- a/FamilyTree/FamilyTree.Core/FamilyTree.Core.csproj
+++ b/FamilyTree/FamilyTree.Core/FamilyTree.Core.csproj
@@ -5,11 +5,13 @@
     <AssemblyName>FamilyTree.Core</AssemblyName>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Neo4jClient" Version="4.0.3" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="Prism.Wpf" Version="7.2.0.1422" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\FamilyTree.Business\FamilyTree.Business.csproj" />
+    <ProjectReference Include="..\..\FamilyTree.Services.Repository.Interfaces\FamilyTree.Services.Repository.Interfaces.csproj" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Adapters\" />
