--- a/FamilyTree.Services.Repository.Interfaces/FamilyTree.Services.Repository.Interfaces.csproj
+++ b/FamilyTree.Services.Repository.Interfaces/FamilyTree.Services.Repository.Interfaces.csproj
@@ -8,4 +8,8 @@
     <PackageReference Include="Neo4jClient" Version="4.0.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\FamilyTree.Business\FamilyTree.Business.csproj" />
+  </ItemGroup>
+
 </Project>
