--- a/FamilyTree.Modules.Person/FamilyTree.Modules.Person.csproj
+++ b/FamilyTree.Modules.Person/FamilyTree.Modules.Person.csproj
@@ -12,6 +12,8 @@
     <ProjectReference Include="..\FamilyTree.Services.Repository.Interfaces\FamilyTree.Services.Repository.Interfaces.csproj" />
     <ProjectReference Include="..\FamilyTree.Services.Repository\FamilyTree.Services.Repository.csproj" />
     <ProjectReference Include="..\FamilyTree.Services.TimeStampedObjects.Interfaces\FamilyTree.Services.TimeStampedObjects.Interfaces.csproj" />
+    <ProjectReference Include="..\FamilyTree.Services.TreeTravelsal.Interfaces\FamilyTree.Services.TreeTravelsal.Interfaces.csproj" />
+    <ProjectReference Include="..\FamilyTree.Services.TreeTravelsal\FamilyTree.Services.TreeTravelsal.csproj" />
     <ProjectReference Include="..\FamilyTree\FamilyTree.Core\FamilyTree.Core.csproj" />
   </ItemGroup>
   <ItemGroup>
