--- a/FamilyTree.Modules.Main/FamilyTree.Modules.Main.csproj
+++ b/FamilyTree.Modules.Main/FamilyTree.Modules.Main.csproj
@@ -5,6 +5,8 @@
     <AssemblyName>FamilyTree.Modules.Main</AssemblyName>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="FontAwesome.WPF" Version="4.7.0.9" />
+    <PackageReference Include="ModernWpfUI" Version="0.9.4" />
     <PackageReference Include="Prism.Wpf" Version="7.2.0.1422" />
   </ItemGroup>
   <ItemGroup>
