--- a/FamilyTree/FamilyTree/FamilyTree.csproj
+++ b/FamilyTree/FamilyTree/FamilyTree.csproj
@@ -6,6 +6,7 @@
     <AssemblyName>FamilyTree</AssemblyName>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="ModernWpfUI" Version="0.9.4" />
     <PackageReference Include="Prism.DryIoc" Version="7.2.0.1422" />
   </ItemGroup>
   <ItemGroup>
